<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="my_title">My Nanodegree Apps!!</string>
    <string name="media_streamer">SPOTIFY STREAMER</string>
    <string name="super_duo1">SCORES APP</string>
    <string name="super_duo2">LIBRARY APP</string>
    <string name="ant_terminator">BUILD IT BIGGER</string>
    <string name="materialize">BACON READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
    <string name="toast_mediaStreamer">This button will launch the Spotify Streamer app</string>
    <string name="toast_duo1">This button will launch the Scores app</string>
    <string name="toast_duo2">This button will launch the Library app</string>
    <string name="toast_terminator">This button will launch the Build it Bigger app</string>
    <string name="toast_baconReader">This button will launch the Bacon Reader app</string>
    <string name="toast_capstone">This button will launch My Capstone app</string>
</resources>
