<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/background">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/my_title"
        android:textColor="@color/title_color"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="@dimen/up_and_down_padding"
        android:paddingBottom="@dimen/up_and_down_padding">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/media_streamer"
                android:textColor="@color/text_color"
                android:id="@+id/streamer_btn"
                android:onClick="clickOnStreamerButton"
                android:background="@drawable/main_activity_buttons"
                android:layout_below="@+id/textView"
                android:layout_alignRight="@+id/scores_btn"
                android:layout_alignEnd="@+id/scores_btn"
                android:layout_alignLeft="@+id/scores_btn"
                android:layout_alignStart="@+id/scores_btn"
                android:layout_marginBottom="@dimen/menu_bottom_margin"
                android:paddingRight="@dimen/padding_for_buttons"
                android:paddingLeft="@dimen/padding_for_buttons"
                android:paddingTop="@dimen/padding_for_buttons"
                android:paddingBottom="@dimen/padding_for_buttons"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/super_duo1"
                android:textColor="@color/text_color"
                android:id="@+id/scores_btn"
                android:onClick="clickOnScoresAppButton"
                android:background="@drawable/main_activity_buttons"
                android:layout_below="@+id/streamer_btn"
                android:layout_alignRight="@+id/library_btn"
                android:layout_alignEnd="@+id/library_btn"
                android:layout_alignLeft="@+id/library_btn"
                android:layout_alignStart="@+id/library_btn"
                android:layout_marginBottom="@dimen/menu_bottom_margin"
                android:paddingRight="@dimen/padding_for_buttons"
                android:paddingLeft="@dimen/padding_for_buttons"
                android:paddingTop="@dimen/padding_for_buttons"
                android:paddingBottom="@dimen/padding_for_buttons"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/super_duo2"
                android:textColor="@color/text_color"
                android:id="@+id/library_btn"
                android:onClick="clickOnLibraryAppButton"
                android:background="@drawable/main_activity_buttons"
                android:layout_below="@+id/scores_btn"
                android:layout_alignRight="@+id/bigger_btn"
                android:layout_alignEnd="@+id/bigger_btn"
                android:layout_alignLeft="@+id/bigger_btn"
                android:layout_alignStart="@+id/bigger_btn"
                android:layout_marginBottom="@dimen/menu_bottom_margin"
                android:paddingRight="@dimen/padding_for_buttons"
                android:paddingLeft="@dimen/padding_for_buttons"
                android:paddingTop="@dimen/padding_for_buttons"
                android:paddingBottom="@dimen/padding_for_buttons"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ant_terminator"
                android:textColor="@color/text_color"
                android:id="@+id/bigger_btn"
                android:onClick="clickOnBiggerAppButon"
                android:background="@drawable/main_activity_buttons"
                android:layout_below="@+id/library_btn"
                android:layout_alignRight="@+id/reader_btn"
                android:layout_alignEnd="@+id/reader_btn"
                android:layout_alignLeft="@+id/reader_btn"
                android:layout_alignStart="@+id/reader_btn"
                android:layout_marginBottom="@dimen/menu_bottom_margin"
                android:paddingRight="@dimen/padding_for_buttons"
                android:paddingLeft="@dimen/padding_for_buttons"
                android:paddingTop="@dimen/padding_for_buttons"
                android:paddingBottom="@dimen/padding_for_buttons"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/materialize"
                android:textColor="@color/text_color"
                android:id="@+id/reader_btn"
                android:onClick="clickOnBaconReaderAppButton"
                android:background="@drawable/main_activity_buttons"
                android:layout_below="@+id/bigger_btn"
                android:layout_alignRight="@+id/capstone_btn"
                android:layout_alignEnd="@+id/capstone_btn"
                android:layout_alignLeft="@+id/capstone_btn"
                android:layout_alignStart="@+id/capstone_btn"
                android:layout_marginBottom="@dimen/menu_bottom_margin"
                android:paddingRight="@dimen/padding_for_buttons"
                android:paddingLeft="@dimen/padding_for_buttons"
                android:paddingTop="@dimen/padding_for_buttons"
                android:paddingBottom="@dimen/padding_for_buttons"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capstone"
                android:textColor="@color/my_app_text_color"
                android:id="@+id/capstone_btn"
                android:onClick="clickOnCapstoneAppButton"
                android:background="@drawable/main_activity_capstone_button"
                android:paddingRight="@dimen/padding_for_buttons"
                android:paddingLeft="@dimen/padding_for_buttons"
                android:paddingTop="@dimen/padding_for_buttons"
                android:paddingBottom="@dimen/padding_for_buttons"
                android:layout_below="@+id/reader_btn"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
